Mention what an ETL is

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -302,6 +302,14 @@
 					</section>
 
 					<section>
+						<ul>
+							<li><strong>E</strong><span class="fragment">xtract</span></li>
+							<li><strong>T</strong><span class="fragment">ransform</span></li>
+							<li><strong>L</strong><span class="fragment">oad</span></li>
+						</ul>
+					</section>
+
+					<section>
 						<p>Batch processing seria o caso de processar os dados de um dia.</p>
 
 						<p>Se novos dados entrassem no total do dia, bastaria reprocessar os dados do dia.</p>
