--- a/tchelinux.html
+++ b/tchelinux.html
@@ -5,9 +5,6 @@
 
         <title>Tchelinux</title>
 
-        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-        <meta name="author" content="Hakim El Hattab">
-
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
@@ -81,7 +78,7 @@
 					<section>
 						<h3>Onde Começou</h3>
 
-						<img class="stretch fragment" src="_images/bar.png" alt="">
+						<img class="stretch" src="_images/bar.png" alt="">
 
 						<aside class="notes">
 							O Tchelinux nasceu em uma mesa de bar.
@@ -105,24 +102,6 @@
 
 				<section>
 					<section>
-						<h3>2006</h3>
-
-						<img class="stretch" src="_images/tchelinux-first.png" alt="">
-
-						<aside class="notes">
-							O primeiro evento do Tchelinux aconteceu em 2006. Eles
-							conseguiram um patrocinio e fizeram camisetas, stickers,
-							buttons e tudo mais que tem nos eventos tradicionais.
-
-							Só que o evento terminou e ainda tinham camisetas sobrando,
-							stickers sobrando, buttons sobrando. E, como diz o Leo:
-
-							"O que a gente faz quando sobram coisas de um evento? A
-							gente faz outro evento!"
-						</aside>
-					</section>
-
-					<section>
 						<h3>2019</h3>
 
 						<img class="stretch" src="_images/tchelinux-2019.png" alt="">
@@ -140,6 +119,10 @@
 						</aside>
 					</section>
 
+					<section data-background="_images/motorbike.jpg">
+					</section>
+
+					<!--
 					<section>
 						<h3>2019</h3>
 
@@ -202,7 +185,9 @@
 							mais longe.)
 						</aside>
 					</section>
+					-->
 
+					<!--
 					<section>
 						<h3>2019</h3>
 
@@ -226,6 +211,7 @@
 							alimentos e foram pessoas de 10 cidades diferentes.
 						</aside>
 					</section>
+					-->
 				</section>
 
 				<section>
@@ -264,7 +250,7 @@
 						<h3>100 eventos em 13 anos</h3>
 						<h3 class="fragment">22 cidades</h3>
 						<h3 class="fragment">~19 toneladas de alimentos arrecadados e distribuídos</h3>
-						<h4 class="fragment">36.408 quilômetros viajados</h4>
+						<!-- <h4 class="fragment">36.408 quilômetros viajados</h4> -->
 
 						<aside class="notes">
 							Nesses 13 anos, pra mim, o número mais importante
@@ -277,8 +263,6 @@
 				<section>
 					<section>
 						<img class="stretch" src="_images/tchelinux-poa2019.jpg" alt="">
-
-						<h4 class="fragment">CFP até 20 de Outubro de 2019.</h4>
 
 						<a href="https://poa.tchelinux.org/#!index.md">https://poa.tchelinux.org/</a>
 
@@ -298,7 +282,11 @@
 
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
-                        <h1 class="fragment semi-opaque">Perguntas?</h1>
+                        <h3 class="fragment semi-opaque">
+							<a href="email:julio.biason@pm.me">
+								julio.biason@pm.me
+							</a>
+						</h3>
                     </section>
                 </section>
             </div>
