This is as close as the Terminimal theme we can get at this point

--- a/base.html
+++ b/base.html
@@ -29,7 +29,7 @@
 		<section id="image">
 			<h1>This one have an image</h1>
 
-			<img src="_images/cargo-cult-smokey.jpg" alt="">
+			<img src="_images/cargo-cult-smokey.jpg" alt="" class="center">
 		</section>
 	</body>
 </html>
