--- a/pycaxias2020.html
+++ b/pycaxias2020.html
@@ -78,104 +78,161 @@
                     </section>
                 </section>
 
-                <section>
-                    <section>
-                        <img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:200px;" class="no-border">
-
-                        <div>
-                            <ul class="empty">
-                                <li>Júlio Biason</li>
-                                <li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
-                                <li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
-                                <li>julio.biason@pm.me</li>
-                            </ul>
-                        </div>
-                    </section>
-
-					<section>
-						<h3>JulioBiason.me</h3>
-
-						<ul>
-							<li><a href="https://blog.juliobiason.me/">Blog</a></li>
-							<li><a href="https://presentations.juliobiason.me/">Presentations</a></li>
-							<li><a href="https://git.juliobiason.me/">Git</a></li>
-							<li><a href="https://resume.juliobiason.me/">CV/Resumé</a></li>
-							<li><a href="https://books.juliobiason.me/">Books</a></li>
-						</ul>
-					</section>
-                </section>
-
 				<section>
-					<section>
-						<h3>"Coisas Que Eu Aprendi Na Marra (Em 30 Anos de Desenvolvimento de Software)</h3>
-					</section>
+					<img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:200px;" class="no-border">
 
-					<section>
-						<h2>Python: Passado, Presente e Futuro</h2>
-
-						<p class="fragment">... na minha visão</p>
-					</section>
+					<div>
+						<ul class="empty">
+							<li>Júlio Biason</li>
+							<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+							<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
+							<li>julio.biason@pm.me</li>
+						</ul>
+					</div>
 				</section>
 
 				<section>
-					<section data-background="_images/past.jpg">
-						<h2 class="semi-opaque">O Passado</h2>
-					</section>
-
-					<section>
-						<img class="stretch" src="_images/python15.png" alt="">
-					</section>
-
-					<section>
-						<h2>Python 1.5 (1998)</h2>
-						<ul>
-							<li><code>assert</code></li>
-							<li>raw strings (<code>r''</code>)</li>
-							<li>Novos métodos de dicionários: <code>.clear()</code>, <code>.copy()</code>, <code>.update()</code>, <code>.get()</code></li>
-						</ul>
-					</section>
-
-					<section>
-						<p><code>[expression] and [on_true] or [on_false]</code></p>
-					</section>
-
-					<section>
-						<p>"Vamos fazer um <i>browser</i> em Python!"</p>
-					</section>
-
-					<section>
-						<img class="stretch" src="_images/tilefile.jpg" alt="">
-
-					</section>
-
-					<section>
-						<ul>
-							<li>Web Server</li>
-							<li class="fragment">Storage: <a href="https://docs.python.org/3/library/pickle.html?highlight=pickle#module-pickle">Pickle</a></li>
-							<li class="fragment">Atualizado storage: MySQL</li>
-							<li class="fragment">Criada toda uma camada para que o carregamento parecesse com leitura de pickles</li>
-						</ul>
-
-						<p class="fragment">Django 1.0: 2008</p>
-					</section>
-					
-					<section>
-						<p>"É mais fácil pra mim vender AJAX e Rails do que Flash e Python."</p>
-					</section>
+					<ul>
+						<li>Co-coordenador do meetup <strong>PyTche</strong></li>
+						<li>Coordenador do meetup <strong>Rust in POA</strong></li>
+						<li>Co-coordenador do meetup <strong>Design de Código</strong></li>
+						<li>Palestrante do <strong>Tchelinux</strong></li>
+					</ul>
 				</section>
 
 				<section>
-					<section data-background="_images/present.jpg">
-						<h2 class="semi-opaque">O Presente</h2>
-					</section>
+					<h3>JulioBiason.me</h3>
 
-					<section>
-						<img class="stretch" src="_images/the-witch-is-dead.png" alt="">
-					</section>
+					<ul>
+						<li><a href="https://blog.juliobiason.me/">Blog</a></li>
+						<li><a href="https://presentations.juliobiason.me/">Presentations</a></li>
+						<li><a href="https://git.juliobiason.me/">Git</a></li>
+						<li><a href="https://resume.juliobiason.me/">CV/Resumé</a></li>
+						<li><a href="https://books.juliobiason.me/">Books</a></li>
+					</ul>
+				</section>
 
-					<section>
-						<img class="stretch" src="_images/python27-clock.png" alt="">
-					</section>
+				<section>
+					<h3>"Coisas Que Eu Aprendi Na Marra (Em 30 Anos de Desenvolvimento de Software)</h3>
+					<h3 class="fragment">😞</h3>
+				</section>
+
+				<section>
+					<h2>Python: Passado, Presente e Futuro</h2>
+
+					<p class="fragment">... na minha visão</p>
+				</section>
+
+				<section data-background="_images/past.jpg">
+					<h2 class="semi-opaque">O Passado</h2>
+				</section>
+
+				<section>
+					<h3>Python 1.5</h3>
+					<img class="stretch" src="_images/python15.png" alt="">
+				</section>
+
+				<section>
+					<h3>Python 1.5 (1998)</h3>
+					<ul>
+						<li><code>assert</code></li>
+						<li>raw strings (<code>r''</code>)</li>
+						<li>Novos métodos de dicionários: <code>.clear()</code>, <code>.copy()</code>, <code>.update()</code>, <code>.get()</code></li>
+					</ul>
+				</section>
+
+				<section>
+					<p><code>[expression] and [on_true] or [on_false]</code></p>
+				</section>
+
+				<section>
+					<p>"Vamos fazer um <i>browser</i> em Python!"</p>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/tilefile.jpg" alt="">
+
+				</section>
+
+				<section>
+					<ul>
+						<li>Web Server</li>
+						<li class="fragment">Storage: <a href="https://docs.python.org/3/library/pickle.html?highlight=pickle#module-pickle">Pickle</a></li>
+						<li class="fragment">Atualizado storage: MySQL</li>
+						<li class="fragment">Criada toda uma camada para que o carregamento parecesse com leitura de pickles</li>
+					</ul>
+
+					<p class="fragment">Django 1.0: 2008</p>
+				</section>
+				
+				<section>
+					<p>"É mais fácil pra mim vender AJAX e Rails do que Flash e Python."</p>
+					<p>-- Tilefile CEO</p>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/iplenix.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/consuela.jpeg" alt="">
+				</section>
+
+				<section data-background="_images/present.jpg">
+					<h2 class="semi-opaque">O Presente</h2>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/the-witch-is-dead.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/python27-clock.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/python-usage.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/ipython.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/ipython-notebook.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/jupyter.jpeg" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/scikit.jpeg" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/python-datascience.png" alt="">
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/guido-no-bdfl.png" alt="">
+				</section>
+
+				<section data-background="_images/back-to-the-future.jpeg">
+					<h2 class="semi-opaque">O Futuro</h2>
+				</section>
+
+				<section>
+					<p>You can't connect the dots looking forward; you can only connect them looking backwards.</p>
+					<p>-- Steve Jobs</p>
+				</section>
+
+				<section>
+					<p>No man is an island,<br>
+						Entire of itself,<br>
+						Every man is a piece of the continent,<br>
+						A part of the main.</p>
+					<p>-- John Donne</p>
 				</section>
             </div>
         </div>
