--- a/flask-40mins.html
+++ b/flask-40mins.html
@@ -78,7 +78,7 @@
                                 <li>Júlio Biason</li>
                                 <li>@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.net">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
