--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -92,7 +92,7 @@
 							<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
 							<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
 							<li>julio.biason@pm.me</li>
-							<li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+							<li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
 						</ul>
 					</div>
 				</section>
@@ -602,7 +602,7 @@ light.switch()</code></pre>
 							<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
 							<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
 							<li>julio.biason@pm.me</li>
-							<li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+							<li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
 						</ul>
 
 						<h3></h3>
