--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -71,7 +71,7 @@
 							<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
 							<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
 							<li>julio.biason@pm.me</li>
-							<li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+							<li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
 						</ul>
 					</div>
 				</section>
@@ -579,7 +579,7 @@
 							<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
 							<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
 							<li>julio.biason@pm.me</li>
-							<li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+							<li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
 						</ul>
 					</div>
 					<h1 class="fragment semi-opaque">Perguntas?</h1>
