--- a/python36.html
+++ b/python36.html
@@ -73,7 +73,7 @@
                                 <li><img src="_images/logo-horizontal-claro.png" alt="CWI Software" class='no-border'>
                                 <li>@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
