--- a/quick-rust.html
+++ b/quick-rust.html
@@ -87,7 +87,7 @@
                                 <li>Júlio Biason</li>
                                 <li>https://functional.cafe/@juliobiason</li>
                                 <li>julio.biason@pm.me</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
@@ -846,8 +846,6 @@ fn main() {
 
                     <section>
                         <img src="_images/rust-issues.png" alt="4.5k issues no Github" class="stretch">
-<<<<<<< Updated upstream
-
 						<aside class="notes">
 							Outra curiosidade de Rust: 4.500 issues nesse screenshot.
 
@@ -863,8 +861,6 @@ fn main() {
 							postar, nada acontece no grupinho seleto que decide todas
 							as coisas da linguagem. Tudo é feito de forma transparente.
 						</aside>
-=======
->>>>>>> Stashed changes
                     </section>
                 </section>
 
@@ -886,7 +882,7 @@ fn main() {
                             <li>Júlio Biason</li>
                             <li>https://functional.cafe/@juliobiason</li>
                             <li>julio.biason@pm.me</li>
-                            <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                            <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                         </ul>
                     </div>
                 </section>
