--- a/rustlatam-2019.html
+++ b/rustlatam-2019.html
@@ -87,7 +87,7 @@
                                 <li>Júlio Biason</li>
                                 <li>https://functional.cafe/@juliobiason</li>
                                 <li>julio.biason@pm.me</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
