--- a/unit-in-unittests-2.html
+++ b/unit-in-unittests-2.html
@@ -69,7 +69,7 @@
                                 <li>Júlio Biason</li>
                                 <li>@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
