--- a/cleancodemeetup.html
+++ b/cleancodemeetup.html
@@ -85,7 +85,7 @@
                                 <li>Júlio Biason</li>
                                 <li>@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
