--- a/porque-rust.html
+++ b/porque-rust.html
@@ -98,7 +98,7 @@
                                 <li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
                                 <li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                                 <li>julio.biason@pm.me</li>
-                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                                <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                             </ul>
                         </div>
                     </section>
@@ -957,7 +957,7 @@ fn call_isan(num: &amp;str) -&gt; Result&lt;Success, Error&gt; {
                             <li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
                             <li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                             <li>julio.biason@pm.me</li>
-                            <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                            <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                         </ul>
                     </div>
                 </section>
