--- a/pycaxias2020.html
+++ b/pycaxias2020.html
@@ -390,7 +390,7 @@ TypeError: pow() takes no keyword arguments
                             <li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
                             <li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                             <li>julio.biason@pm.me</li>
-                            <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+                            <li><a href="https://presentations.juliobiason.me">https://presentations.juliobiason.me</a></li>
                         </ul>
                     </div>
                 </section>
