BSD, MIT and Apache licenses

--- a/com-licenca.html
+++ b/com-licenca.html
@@ -188,16 +188,14 @@ resultantes da exploração de suas criações."
 				
 				<section data-background="_images/gpl-logo.png">
 					<div class="semi-opaque">
-						<ul class="empty">
-							<p>
-								Se eu estou fazendo um software específico para
-								uma empresa, posso licenciar como GPL?
-							</p>
+						<p>
+							Se eu estou fazendo um software específico para
+							uma empresa, posso licenciar como GPL?
+						</p>
 
-							<p class="fragment">
-								<strong>Sim.</strong>
-							</p>
-						</ul>
+						<p class="fragment">
+							<strong>Sim.</strong>
+						</p>
 					</div>
 				</section>
 
@@ -207,6 +205,22 @@ resultantes da exploração de suas criações."
 							Se eu estou fazendo um software específico para uma
 							empresa, e licenciar pela GPL, posso cobrar por
 							isso?
+						</p>
+
+						<p class="fragment">
+							<strong>Sim.</strong>
+							<span class="fragment">
+								Apenas entregue os fontes junto.
+							</span>
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/gpl-logo.png">
+					<div class="semi-opaque">
+						<p>
+							Posso pegar um software GPL, fazer alterações
+							e cobrar por isso?
 						</p>
 
 						<p class="fragment">
@@ -234,6 +248,10 @@ resultantes da exploração de suas criações."
 								Você não pode retirar o copyright atual.
 							</strong>
 						</p>
+
+						<p class="fragment">
+							Você precisa entregar os fontes junto.
+						</p>
 					</div>
 				</section>
 
@@ -248,6 +266,25 @@ resultantes da exploração de suas criações."
 						<p class="fragment">
 							<strong>Não.</strong>
 							<span class="fragment">GPLv2/v3 cobrem apenas distribuição.</span>
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/gpl-logo.png">
+					<div class="semi-opaque">
+						<p>
+							Posso gerar uma aplicação mobile GPL e colocar no store?
+						</p>
+
+						<p class="fragment">Não.</p>
+
+						<p class="fragment">
+							<em>
+								O problema é que quem está distribuindo o
+								aplicativo (Apple/Google) não tem uma área
+								para distribuição dos fontes e não querem
+								se envolver com isso.
+							</em>
 						</p>
 					</div>
 				</section>
@@ -353,7 +390,307 @@ resultantes da exploração de suas criações."
 							Sim.
 						</p>
 					</div>
+				</section>
 
+				<section data-background="_images/gpl-logo.png">
+					<div class="semi-opaque">
+						<h2>Quem usa GPL?</h2>
+
+						<ul>
+							<li>Linux¹</li>
+							<li>MySQL</li>
+							<li>BusyBox</li>
+							<li>VLC</li>
+							<li>JVM</li>
+							<li>OpenJDK</li>
+						</ul>
+					</div>
+				</section>
+
+				<section data-background="_images/gpl-logo.png">
+					<div class="semi-opaque">
+						<h2>Linux</h2>
+
+						<p>
+							"This program is free software; you can redistribute
+							it and/or modify it under the terms of the GNU
+							General Public License as published by the Free
+							Software Foundation; 
+							<span class="fragment fade-out">either </span>version 2 
+							of the License<span class="fragment fade-out">,
+								or (at your option) any later version.</span>"
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/lgpl-logo.png">
+					<div class="semi-opaque">
+						<h2>Quem usa LGPL?</h2>
+
+						<img class="stretch" src="_images/github-lgpl.png" alt="">
+					</div>
+				</section>
+
+				<section data-background="_images/lgpl-logo.png">
+					<div class="semi-opaque">
+						<h2>Quem usa LGPL?</h2>
+
+						<ul>
+							<li>Qt</li>
+							<li>Cedega</li>
+							<li>LibVLC</li>
+							<li>Lazarus</li>
+						</ul>
+					</div>
+				</section>
+
+				<section data-background="_images/agpl-logo.png">
+					<div class="semi-opaque">
+						<h2>Quem usa AGPL?</h2>
+
+						<ul>
+							<li>Gitorious</li>
+							<li>Mastodon</li>
+							<li>Nextcloud</li>
+							<li>ScyllaDB</li>
+							<li>Launchpad</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/bsd.png" alt="">
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<h2>BSD 0-Clause</h2>
+
+						<p>
+							Permission to use, copy, modify, and/or distribute
+							this software for any purpose with or without fee
+							is hereby granted.
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<h2>BSD 2-Clause</h2>
+
+						<p>
+							Redistribution and use in 
+							<span class="fragment highlight-blue">source and binary
+							forms</span>, with or without modification, are
+							permitted provided that the following conditions are
+							met:
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<h2>BSD 2-Clause</h2>
+						<ol>
+							<li>
+								Redistributions of source code must retain the
+								above copyright notice, this list of conditions
+								and the following disclaimer.
+							</li>
+
+							<li>
+								Redistributions in binary form must reproduce
+								the above copyright notice, this list of
+								conditions and the following disclaimer in the
+								documentation and/or other materials provided
+								with the distribution.
+							</li>
+						</ol>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<h2>BSD 3-Clause</h2>
+
+						<ol start="3">
+							<li>
+								Neither the name of the &lt;organization&gt; nor the
+								names of its contributors may be used to
+								endorse or promote products derived from this
+								software without specific prior written
+								permission.
+							</li>
+						</ol>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<h2>BSD 4-Clause</h2>
+
+						<ol start="4">
+							<li>
+								All advertising materials mentioning features
+								or use of this software must display the
+								following acknowledgement: This product
+								includes software developed by the
+								&lt;organization&gt;.
+							</li>
+						</ol>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<p>
+							Se eu estou fazendo um software específico para
+							uma empresa, posso licenciar como BSD?
+						</p>
+
+						<p class="fragment">
+							<strong>Sim.</strong>
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<p>
+							Posso pegar um software BSD, mudar o nome,
+							colocar meu nome nos Copyrights e distribuir?
+						</p>
+
+						<p class="fragment">
+							Sim.
+						</p>
+
+						<p class="fragment">
+							<strong>
+								Você não pode retirar o copyright atual.
+							</strong>
+						</p>
+
+						<p class="fragment">
+							<strong>
+								Você não precisa entregar os fontes.
+							</strong>
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<p>
+							Posso gerar uma aplicação mobile BSD e colocar no store?
+						</p>
+
+						<p class="fragment">Sim.</p>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<p>
+							Se eu fizer um serviço web qualquer que use uma
+							biblioteca BSD, eu tenho que distribuir os fontes
+							para todo mundo que acessar o site?
+						</p>
+
+						<p class="fragment">
+							Não.
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/bsd.png">
+					<div class="semi-opaque">
+						<h2>Quem usa BSD?</h2>
+
+						<ul>
+							<li>Unix *BSD</li>
+							<li>Anaconda</li>
+							<li>Django</li>
+							<li>Flask</li>
+							<li>go</li>
+							<li>Memcached</li>
+							<li>PHPUnit</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/MIT_logo.svg" alt="">
+				</section>
+
+				<section data-background="_images/MIT_logo.svg">
+					<div class="semi-opaque">
+						<h2>MIT</h2>
+
+						<p>
+							The above copyright notice and this permission
+							notice shall be included in all copies or
+							substantial portions of the Software.
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/MIT_logo.svg">
+					<div class="semi-opaque">
+						<h2>Quem usa MIT?</h2>
+
+						<ul>
+							<li>.NET core</li>
+							<li>AngularJS</li>
+							<li>Babel</li>
+							<li>Godot</li>
+							<li>Lua</li>
+							<li>Pilhas de *.js</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/apache-license.png" alt="">
+				</section>
+
+				<section data-background="_images/apache-license.png">
+					<div class="semi-opaque">
+						<h2>Apache 2.0</h2>
+
+						<img src="_images/apache-license-2.0.png" alt="" style="max-height:5%">
+					</div>
+				</section>
+
+				<section data-background="_images/apache-license.png">
+					<div class="semi-opaque">
+						<h2>Apache 2.0</h2>
+						
+						<p>
+							Subject to the terms and conditions of this
+							License, each Contributor hereby grants to You a
+							perpetual, worldwide, non-exclusive, no-charge,
+							royalty-free, irrevocable copyright license to
+							reproduce, prepare Derivative Works of, publicly
+							display, publicly perform, sublicense, and
+							distribute the Work and such Derivative Works in
+							Source or Object form.
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/apache-license.png">
+					<div class="semi-opaque">
+						<h2>Quem usa Apache?</h2>
+
+						<ul>
+							<li>Android</li>
+							<li>Apache *</li>
+							<li>Elixir</li>
+							<li>IntelliJ IDEA</li>
+							<li>Kotlin</li>
+						</ul>
+					</div>
 				</section>
 
 				<section data-background='_images/thats-all-folks.jpg'>
@@ -382,7 +719,7 @@ resultantes da exploração de suas criações."
 				center: true,
 				// showNotes: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				transition: 'fade', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
 				dependencies: [
