Public domain and it is done!

--- a/com-licenca.html
+++ b/com-licenca.html
@@ -148,6 +148,19 @@ resultantes da exploração de suas criações."
 					</div>
 				</section>
 
+				<section data-background="_images/copyright.jpeg">
+					<div class="semi-opaque">
+						<p>
+							<strong>AVISO!</strong>
+						</p>
+
+						<p>
+							Eu não sou advogado, partes legais não são o meu
+							forte.
+						</p>
+					</div>
+				</section>
+
 				<section>
 					<img class="stretch" src="_images/gpl-logo.png" alt="">
 				</section>
@@ -608,13 +621,15 @@ resultantes da exploração de suas criações."
 						<h2>Quem usa BSD?</h2>
 
 						<ul>
-							<li>Unix *BSD</li>
-							<li>Anaconda</li>
-							<li>Django</li>
-							<li>Flask</li>
-							<li>go</li>
-							<li>Memcached</li>
-							<li>PHPUnit</li>
+							<li>FreeBSD (2-clause)</li>
+							<li>NetBSD (2-clause)</li>
+							<li>OpenBSD (0-clause, ISC)</li>
+							<li>Anaconda (3-clause)</li>
+							<li>Django (3-clause)</li>
+							<li>Flask (0-clause)</li>
+							<li>go (3-clause)</li>
+							<li>Memcached (3-clause)</li>
+							<li>PHPUnit (3-clause)</li>
 						</ul>
 					</div>
 				</section>
@@ -642,11 +657,25 @@ resultantes da exploração de suas criações."
 						<ul>
 							<li>.NET core</li>
 							<li>AngularJS</li>
+							<li>React²</li>
 							<li>Babel</li>
 							<li>Godot</li>
 							<li>Lua</li>
 							<li>Pilhas de *.js</li>
 						</ul>
+					</div>
+				</section>
+
+				<section data-background="_images/MIT_logo.svg">
+					<div class="semi-opaque">
+						<h2>React</h2>
+
+						<p>
+							Em 2017, o Facebook mudou a licença do React para
+							que, caso a empresa seja processada <em>por
+							qualquer motivo</em>, o litigiante perde o direito
+							de uso do produto.
+						</p>
 					</div>
 				</section>
 
@@ -690,6 +719,28 @@ resultantes da exploração de suas criações."
 							<li>IntelliJ IDEA</li>
 							<li>Kotlin</li>
 						</ul>
+					</div>
+				</section>
+
+				<section>
+					<h2>E se eu não colocar nenhuma licença?</h2>
+				</section>
+
+				<section>
+					<img class="stretch" src="_images/public-domain.png" alt="">
+				</section>
+
+				<section data-background="_images/public-domain.png">
+					<div class="semi-opaque">
+						<h2>Public domain</h2>
+
+						<p>
+							The public domain consists of all the creative work
+							to which no exclusive intellectual property rights
+							apply. Those rights may have expired, been
+							forfeited, expressly waived, or may be
+							inapplicable.
+						</p>
 					</div>
 				</section>
 
