--- a/com-licenca.html
+++ b/com-licenca.html
@@ -834,6 +834,25 @@ resultantes da exploração de suas criações."
 					</div>
 				</section>
 
+				<section>
+					<h2>Links</h2>
+
+					<ul>
+						<li><a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL v3</a></li>
+						<li><a href="https://www.gnu.org/licenses/lgpl-3.0.en.html">LGPL v3</a></li>
+						<li><a href="https://www.gnu.org/licenses/agpl-3.0.en.html">AGPL v3</a></li>
+						<li>
+							BSD:
+							<a href="https://opensource.org/licenses/ISC">0-clause/ISC</a>,
+							<a href="https://opensource.org/licenses/BSD-2-Clause">2-clause</a>,
+							<a href="https://opensource.org/licenses/BSD-3-Clause">3-clause</a>
+						</li>
+						<li><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a></li>
+						<li><a href="https://pt.wikipedia.org/wiki/Dom%C3%ADnio_p%C3%BAblico">Domínio Público</a></li>
+						<li><a href="https://opensource.org/licenses">OSI Licenses</a></li>
+					</ul>
+				</section>
+
 				<section data-background='_images/thats-all-folks.jpg'>
 					<div class="semi-opaque">
 						<ul class="empty">
