Added note about dual-licensing

--- a/com-licenca.html
+++ b/com-licenca.html
@@ -835,6 +835,21 @@ resultantes da exploração de suas criações."
 				</section>
 
 				<section>
+					<h2>Dual Licensing</h2>
+
+					<p>
+						Um produto pode ser licenciado sob mais de uma licença,
+						sendo escolhido por quem está usando o produto.
+					</p>
+
+					<p class="fragment">
+						<strong>
+							Requer aprovação de todos contribuidores.
+						</strong>
+					</p>
+				</section>
+
+				<section>
 					<h2>Links</h2>
 
 					<ul>
