--- a/porque-rust.html
+++ b/porque-rust.html
@@ -87,7 +87,7 @@
                 </section>
 
                 <section>
-                    <img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:200px;" class="no-border">
+                    <!-- <img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:200px;" class="no-border"> -->
 
                     <div>
                         <ul class="empty">
@@ -114,7 +114,10 @@
                 </section>
 
                 <section>
-                    <h2>História</h2>
+                    <h2>
+                        História
+                        <img src="_images/rust-ferris.png" alt="" style="width:100px;margin:0">
+                    </h2>
 
                     <ul>
                         <li>Criada em 2006 por Graydon Hoare.</li>
@@ -140,10 +143,10 @@
 
                     <p>
                     Basic (com números e estruturado), dBase III Plus,
-                    Clipper, Pascal, Cobol, Delphi (ObjectPascal),
-                    C, C++, ActionScript (Flash), PHP, JavaScript,
-                    Python, Objective-C, Clojure, Java, Scala
-                    <strong>, Rust.</strong>
+                    C, C++, ActionScript (Flash), PHP, JavaScript, 
+                    Clipper, Pascal, Cobol, Delphi (ObjectPascal), Bash,
+                    Python, Objective-C, Clojure, Java, Scala, Groovy,
+                    <strong>Rust.</strong>
                     </p>
 
                     <aside class="notes">
