Updated the licenses presentation

--- a/com-licenca.html
+++ b/com-licenca.html
@@ -80,9 +80,9 @@
 					</section>
 				</section>
 
-				<section data-background="_images/avatar-20170726.png">
+				<section>
 					<div class="semi-opaque">
-						<img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:200px;" class="no-border">
+						<img src="_images/avatar-hd.png" alt="Me" style="float:left;width:200px;" class="no-border">
 
 						<div>
 							<ul class="empty">
@@ -95,29 +95,16 @@
 					</div>
 				</section>
 
-				<section data-background="_images/avatar-20170726.png">
-					<div class="semi-opaque">
-						<ul>
-							<li>Coordenador do meetup <strong>Rust in POA</strong></li>
-							<li>Co-coordenador do meetup <strong>PyTche</strong></li>
-							<li>Co-coordenador do meetup <strong>Design de Código</strong></li>
-							<li>Palestrante do <strong>Tchelinux</strong></li>
-						</ul>
-					</div>
-				</section>
+				<section>
+                    <h3>JulioBiason.me</h3>
 
-				<section data-background="_images/avatar-20170726.png">
-					<div class="semi-opaque">
-						<h3>JulioBiason.me</h3>
-
-						<ul>
-							<li><a href="https://blog.juliobiason.me/">Blog</a></li>
-							<li><a href="https://presentations.juliobiason.me/">Presentations</a></li>
-							<li><a href="https://git.juliobiason.me/">Git</a></li>
-							<li><a href="https://resume.juliobiason.me/">CV/Resumé</a></li>
-							<li><a href="https://books.juliobiason.me/">Books</a></li>
-						</ul>
-					</div>
+                    <ul>
+                        <li><a href="https://blog.juliobiason.me/">Blog</a></li>
+                        <li><a href="https://presentations.juliobiason.me/">Presentations</a></li>
+                        <li><a href="https://git.juliobiason.me/">Git</a></li>
+                        <li><a href="https://resume.juliobiason.me/">CV/Resumé</a></li>
+                        <li><a href="https://books.juliobiason.me/">Books</a></li>
+                    </ul>
 				</section>
 
 				<section>
@@ -276,9 +263,42 @@ resultantes da exploração de suas criações."
 				<section data-background="_images/gpl-logo.png">
 					<div class="semi-opaque">
 						<p>
+                            Posso pegar uma biblioteca GPL, adicionar no meu
+                            software, e continuar com ele fechado?
+						</p>
+
+						<p class="fragment">
+                            <strong>Não.</strong>
+                            <span class="fragment">
+							    O uso de uma biblioteca GPL considera que o código
+                                que a usa é derivado (porque não funciona sem
+                                a biblioteca).
+                            </span>
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/gpl-logo.png">
+					<div class="semi-opaque">
+						<p>
 							Se eu fizer um serviço web qualquer e licenciar
 							como GPL, eu tenho que distribuir os fontes para
 							todo mundo que acessar o site?
+						</p>
+
+						<p class="fragment">
+							<strong>Não.</strong>
+							<span class="fragment">GPLv2/v3 cobrem apenas distribuição.</span>
+						</p>
+					</div>
+				</section>
+
+				<section data-background="_images/gpl-logo.png">
+					<div class="semi-opaque">
+						<p>
+                            Se eu pegar um software GPL qualquer, mesmo uma
+                            biblioteca, fizer uma interface web para ele,
+                            eu preciso colocar meu software como GPL?
 						</p>
 
 						<p class="fragment">
