--- a/rust-em-10-minutos.html
+++ b/rust-em-10-minutos.html
@@ -72,7 +72,7 @@
     <body>
         <div class="reveal">
             <div class="slides">
-                <section data-background="_images/rust-ferris.png" data-header>
+                <section data-background="_images/rust-evangelism.jpg" data-header>
                     <h2 class="semi-opaque">Rust Em 10 Minutos</h2>
                 </section>
 
@@ -87,6 +87,7 @@
                         <li>Patrocinada pela Mozilla em 2009.</li>
                         <li>Versão 1.0 em 2015.</li>
                         <li>Versão atual: 1.72</li>
+                        <li class="fragment">Edition: 2021</li>
                     </ul>
 
                     <aside class="notes">
@@ -169,6 +170,8 @@
                     <h2>Borrow Checker</h2>
 
                     <h3 class="fragment">(and lifetimes)</h3>
+
+                    <h2 class="fragment">+ Good Syntax</h2>
                 </section>
 
                 <section>
@@ -249,9 +252,21 @@ func foo() {
                     <ul>
                         <li class="fragment">Dependency manager</li>
                         <li class="fragment">Build tool</li>
+                        <li class="fragment">Test manager</li>
                         <li class="fragment">Distributable packages</li>
                         <li class="fragment">Uploader to the registry (crates.io)</li>
                     </ul>
+                </section>
+
+                <section>
+                    <h2>Crates.io</h2>
+
+                    <p>"124,474 Crates in stock"</p>
+
+                    <p class="fragment">
+                        PyPI: "479,236 projects"
+                        <p class="fragment">20 years vs 8</p>
+                    </p>
                 </section>
 
                 <section>
